cluster/apps/networking/external-services/proxmox/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox
subsets:
  - addresses:
      - ip: 192.168.1.101
    ports:
      - name: https
        port: 8006
        protocol: TCP
