cluster/apps/networking/external-services/proxmox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8006
      targetPort: https
  type: LoadBalancer
