cluster/apps/networking/external-services/proxmox/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox
  labels:
    app.kubernetes.io/name: proxmox
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`proxmox.${SECRET_LOCAL_DOMAIN}`)
      middlewares:
        - name: local-headers@file
        - name: local-only@file
      services:
        - name: proxmox
          port: 8006
          namespace: default
          serversTransport: proxmox
  tls:
    secretName: proxmox-prod-tls
